# follower-maze

./: .gitattributes  LICENSE  README.md  follower-maze.cabal
app/: Main.hs
instructions/: followermaze.sh  instructions.md
src/: Client.hs  Config.hs  Event.hs  EventQueue.hs  Server.hs
src/FollowerMaze/: Client.hs  Config.hs  Event.hs  EventQueue.hs  Server.hs
test/: EventQueueTest.hs  EventTest.hs  Generators.hs  Main.hs  Test.hs
test/FollowerMaze/: EventQueueTest.hs  EventTest.hs
test/FollowerMaze/Test/: Generators.hs
