name:                follower-maze
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/amar47shah/follower-maze#readme
license:             BSD3
license-file:        LICENSE
author:              Amar Shah
maintainer:          amar47shah@gmail.com
copyright:           2016 Amar Shah
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Client
                     , Config
                     , Event
                     , EventQueue
                     , Server
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , safe
                     , stm
  default-language:    Haskell2010

executable follower-maze-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , follower-maze
                     , network
  default-language:    Haskell2010

test-suite follower-maze-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       EventTest
                     , EventQueueTest
                     , Generators
  build-depends:       base
                     , follower-maze
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/amar47shah/follower-maze
